2010-08-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist:
	Add NSMaximumRecentDocumentCount default.

2010-04-28 German Arias <german@xelalug.org>

	* Modules\Defaults\Resources\English.lproj\Defaults.plist:
	Added GSUseIconManager

2009-11-09 Riccardo Mottola <rmottola@users.sf.net>

	* Modules\Defaults\Resources\English.lproj\Defaults.plist:
	Changed the default name from the obsolete
	GSX11HandlesWindowDecorations to GSBackHandlesWindowDecorations

2009-10-30 Riccardo Mottola <rmottola@users.sf.net>

	* SystemPreferences: changed to use standard info panel
	and set release version to 1.1.0

2009-10-26 Riccardo Mottola <rmottola@users.sf.net>

	* Modules/Themes : initial commit
	
2009-05-23 Riccardo Mottola <rmottola@users.sf.net>

	* Modules/Defaults/Resources/English.lproj/Defaults.plist: added live resizing of SplitViews

2009-02-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Modules/ColorSchemes/ColorSchemesInfo.plist:
	* Modules/Defaults/DefaultsInfo.plist:
	* Modules/FileSystem/FileSystemInfo.plist:
	* Modules/Fonts/FontModuleInfo.plist:
	* Modules/ModifierKeys/ModifierKeysInfo.plist:
	* Modules/Template/TemplateInfo.plist:
	* Modules/TimeZone/TimeZoneInfo.plist:
	* Modules/Volumes/VolumesInfo.plist:
	* PreferencePanes/NSPreferencePane.h:
	* PreferencePanes/NSPreferencePane.m:
	* SystemPreferences/SystemPreferences.m:
	Remove strange non-standard use of GSBundleIdentifier and replace
	with the normal bundle identifier mechanism.
	Also change other info keys to standard ones.

2009-01-30 20:59-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PreferencePanes/NSPreferencePane.m: Remove checks for non-standard
	Cocoa elements in the plist.  Also remove checks for things that
	NSBundle itself checks for.

2009-01-10 Richard Frith-Macdonald <rfm@gnu.org>

	* PreferencePanes/NSPreferencePane.m: Use infoDictionary of bundle
	* SystemPreferences/SystemPreferences.m: Use infoDictionary of bundle